# cnes

./: .clangd  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
shaders/: nes.frag  nes.vert
src/: apu.c  apu.h  cart.c  cart.h  cnes.h  cpu.c  cpu.h  gui.c  gui.h  input.h  main.c  mapper.c  mapper.h  nes.c  nes.h  palette.h  ppu.c  ppu.h
src/mapper/: 000.c  001.c  002.c  003.c  004.c  007.c
src/mappers/: 0.c  000.c  001.c  002.c  003.c  004.c  007.c  009.c  079.c  1.c  148.c  2.c  3.c  4.c  7.c  79.c
tools/: build_shadercross.sh  build_shaders.sh
